--- a/src/components/GnomeCard/gnomeCard.css
+++ b/src/components/GnomeCard/gnomeCard.css
@@ -1,7 +1,7 @@
 .cardContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
   width: 95%;
   margin-top:5%;
   padding-bottom: 4%;
@@ -18,7 +18,7 @@
 
 .cardContainer img{
   width: 100%;
-  height: auto;
+  height: 300px;
   border-radius: 30px 30px 0px 0px;
 }
 
@@ -28,4 +28,32 @@
 
 .cardContainer i{
   font-size: 40px;
+}
+
+.infoContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+@media screen 
+  and (min-width: 1200px) 
+  and (max-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+    
+    .cardContainer {
+      height: 500px;
+      width: 300px;
+      margin: 2%;
+      padding-bottom: 2%;
+    }
+
+    .cardContainer img{
+      width: 100%;
+      height: 200px;
+      border-radius: 30px 30px 0px 0px;
+    }
 }
